[package]
name = "bigcat"
version = "0.1.1"
edition = "2021"
authors = ["Shiva Prasanth <kesavarapu.siva@gmail.com>"]
description = "Simple command line utility which writes timestamp for each inputted line"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/bigcat/"
homepage = "https://github.com/cedric05/bigcat/"
repository = "https://github.com/cedric05/bigcat/"
readme = "README.md"
keywords = ["terminal", "cat"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
anyhow = "1.0.52"
colored ="2.0.0"